[tool.poetry]
name = "airflow-tutorials"
version = "0.1.0"
description = ""
authors = ["Rajat Nigam <rajatnigam89@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
apache-airflow = "^2.8.1"
apache-airflow-providers-postgres = "^5.10.0"
apache-airflow-providers-http = "^4.8.0"
pandas = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
